--- a/index.html
+++ b/index.html
@@ -1,12 +1,132 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Első házi</title>
-</head>
-<body>
-    <h1>Halihó</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Pilis házi</title>
+  </head>
+  <body>
+    <header><img class="headerimg" src="./img/header.jpeg" alt="Pilisről egy tájkép"/></header>
+
+    <nav>
+      <ul>
+        <li><a href="#klastrom"> Klastrom-szirtek</a></li>
+        <li><a href="#teto">Pilis-tető</a></li>
+        <li><a href="#oszoly">Oszoly</a></li>
+      </ul>
+    </nav>
+
+      <section>
+        <article>
+          <h2 id="klastrom">Klastrom-szirtek</h2>
+          <img class="articleimg" src="./img/klastrom.jpg" alt="Klastrom-szirtek oldalról"/>
+          <p>
+            A Fekete-kőtől tovább haladva a Pilis-nyergen át, a sárga jelzésen
+            haladva, mintegy 2 km. múlva érjük el a Klastrom-szirteket. Az út
+            végig lefelé lejt, csupán a szirtek előtt pár száz méterre vált
+            meredek emelkedőre. Érdemes felkapaszkodni, hiszen több pontról is
+            gyönyörű kilátás nyílik nyugat felé. A közeli községeken kívül szép
+            időben jól látszanak a Gerecse hegyei, a Duna, illetve Szlovákia
+            felé is messze elláthatunk. A lábunk alatt található
+            Klastrompusztáról rövidebb úton is felkapaszkodhatunk ide, közben
+            útba ejthetjük a Leány és Legény barlangot is. A Kétbükkfa-nyereghez
+            a piros jelzésen haladva, a Pilis-nyeregnél rátérve a zöld
+            keresztre, mintegy 3 km-es járással térhetünk vissza. <br>
+            <samp><b>Plusz túra tipp:</b></samp> <br>
+            Egy olyan látnivalókban gazdag túrát ajánlunk most nektek, amelyre ritkán akad példa: egy kirándulás alatt egyszerre két
+            barlangot, három kilátópontot és a Pálos rend 13. századi történelmi emlékhelyét kereshetjük fel. Ugyan a szint nem
+            elhanyagolható, ezért érdemes rá akár egy egész napot szánni, beleértve az energiautánpótlást is Klastrompusztán, a
+            büfében.
+            
+            A Pálos rendet Boldog Özséb esztergomi kanonok alapította, amikor 1250-ben egyesítette a Patacs-hegyi és a pilisi
+            remetéket, akik az egyesítés előtt egyenként vagy kisebb csoportokban a domb- és hegyvidékeken, barlangok és források
+            közelében telepedtek le. Még ugyanekkor, 1250 táján a Szent Kereszt tiszteletére Klastrompusztán templomot, majd
+            kolostort emeltek. A rend pápai jóváhagyása után ez a kolostor lett a pálosok első központja. Hanyatlásuk 1526-ban, a
+            Mohácsi csatát követően kezdődött, amikor is a Budára vonuló törökök kifosztották, fölégették és elpusztították a
+            kolostorokat.            
+            Nos, ennek a kornak az építészeti emlékeit fedezhetjük fel klastrompusztai látogatásunk alkalmával, ahol a Pálos rend
+            történetébe mélyebb betekintést is nyerhetünk. Az erdőbe továbbindulva a Csévi-szirtek alatt megtaláljuk a remeték
+            egy-egy bázis pontját, a Leány- és Legény-barlangot, majd a Klastrom-szirtről, a Kémény-szikláról jó pár méterrel
+            magasabbról fentről is megtekinthetjük a fák között megbújó apró települést, Klastrompusztát.            
+            Továbbhaladva a Pilis-nyereg feletti kilátópontról megcsodálhatjuk Pilisszentlélek és Esztergom panorámáját, majd a
+            Borostás-hegy hosszan elnyúló gerincén végighaladva eljutunk a Kétágú-hegyig, ahonnan remek kilátás nyílik Kesztölcre, a
+            Palatinus-tóra és Dorogra egyaránt.            
+            Ettől a ponttól visszafordulva szintén nagyszerű panoráma tárul elénk a Borostás-hegy alatti szőlőföldekre, ha jobbra
+            feltekintünk, akkor pedig a meredek hegyoldalból itt-ott kikandikáló fehér szirteket csodálhatjuk meg.            
+            Igazán tartalmas és minden szempontból lenyűgöző ez a túra, amit meleg szívvel ajánlunk mindenkinek.
+          </p>
+        </article>
+        <article>
+          <h2 id="teto">Pilis-tető</h2>
+          <img class="articleimg" src="./img/pilis-teto.jpg" alt="Pilis-tető alulról"/>
+          <p>
+            A Pilis legmagasabb pontja 756 méterrel emelkedik a Balti-tenger
+            szintje fölé, s ezzel a Kőszegi-hegységben található Írott-kő (882
+            m) után a Dunántúl legmagasabb pontja.
+
+            A Pilis-tetőről gyönyörű panoráma kínálkozik Dobogókő,
+            Pilisszentkereszt, Pilisszántó, a Hosszú-hegy, a Kis- és Nagy-Kevély
+            valamint a Budai-hegyek irányába is, míg a Pilis nyugati oldalán
+            található kilátóhelyről Kesztölc felé szép letekinteni.<br>
+
+            Megközelítés: <br>
+            
+            Dobogókőről: a vendégei számára ingyenes parkolási lehetőséget
+            nyújtó Makovecz Zsindelyes Vendégháztól a kék jelzésen juthatunk el
+            Dobogókő központjáig. Innen a zöld kereszt jelzést követve elhagyjuk
+            a Két-bükkfa-nyereget, majd közvetlenül a Pilis-nyereg előtt erről
+            az útról balra fordulunk a zöld jelzést követve, amelyen egy
+            hosszabb szakasz megtétele után a Pilis csúcsa járt ösvényen érhető
+            el (az ösvényt azelőtt kell keresni, mielőtt a jelzett út
+            határozottan lejtőssé válna). Dobogókő – Pilis -tető: 9 km, körtúra:
+            19,8 km
+            Pilisszentkeresztről: A pirossal jelzett úton haladjunk délnyugati
+            irányba, majd amikor az balra fordulna, mi haladjuk továbba zöld
+            jelzésen. Ez az út egy kanyargós panoráma szerpentinné alakul,
+            amelyen feljuthatunk a Pilis legmagasabb pontjára. Pilisszentkereszt
+            – Pilis-tető kb. 4,3 km
+            Útvonal: Pilisvörösvár felőli érkezés esetén Pilisszántón keresztül kell menni és a buszforduló után balra található
+            parkolóban érdemes az autót letenni. Innen a műúton Pilisszentkereszt irányába vezet az út , majd pár száz meter
+            megtétele után a balra található piros turista jelzést kell követni. Az út elhalad az Orosdy-kastély és a Magas –hegy
+            (409 m) mellett. A kereszteződéshez elérve a zöld jelzés vezet először a László kúpjához, majd a Pilis-tetőhöz, érintve
+            a Trézsi forrást is.                        
+            A Pilis vagy Pilis-tető 756 m-es tengerszint feletti magasságával a Pilis hegység, egyúttal a Dunántúli-középhegység
+            legmagasabb hegycsúcsa. Kedvelt kirándulóhely. Mészkő alkotta vonulatának keleti oldalában található a Vaskapu.
+            A hegytetőn régebben a Magyar Néphadsereg légvédelmi rakétabázisa működött, de a rendszerváltás után felszámolták. Az
+            elhagyott bunkerek ma is megtalálhatók. A hegytetőn lévő katonai bázis (harcálláspont) egészen 1996-ig üzemelt; Budapest
+            légtérvédelmét látta el 11/2 Légvédelmi Rakétaosztály néven. A hozzá tartozó laktanya Pilisszentkereszt község felett, a
+            Dobogókőre vezető út mellett található. A katonai bázisból már csak a betonbunkerek maradtak meg, melyekben egykoron a
+            rakétaszállító teherautók álltak.            
+            A hegy legmagasabb pontján állt a Földmérő Intézet által 1976-ban építtetett, 14 m magas geodéziai mérőtorony (a a
+            75-3001 nevű síkhálózati alappont). A légvédelmi bázis bezárása után ez is lepusztult, fém részeit ellopták. A tornyot
+            civilek időjárásmérő állomás céljára állították helyre.</p>
+        </article>
+        <article>
+          <h2 id="oszoly">Oszoly</h2>
+          <img class="articleimg" src="./img/oszoly.jpg" alt="Oszolyi kettős kereszt"/>
+          <p>
+            Ahogy ezek az élőlények pusztultak és vázuk elmállott, úgy nőtt a
+            tengeri üledék vastagsága is. Az akár ezerméteres vastagságú üledék
+            a nyomás hatására kristályos lett. A lemezmozgásoknak köszönhetően a
+            tenger összezárult, az üledékes sziklák feltorlódtak, és így
+            keletkezett a ma látható sziklaszirt. Bár a szikla erősen lekopott
+            már, de ha elég figyelmesek vagyunk, itt-ott felfedezhetünk benne
+            kagylóhéj lenyomatokat.
+          </p>
+        </article>
+      </section>
+
+      <footer>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21473.56898962761!2d18.878003029155895!3d47.719442511759304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a7c6e2a8952e3%3A0x907f88ebf374a9d!2sDobogo-ko!5e0!3m2!1shu!2shu!4v1647072238462!5m2!1shu!2shu"
+          width="100%"
+          height="200"
+          style="border-top: 2px solid brown"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </footer>
+  </body>
 </html>
